# agentic-workstation

./: .gitignore  .pre-commit-config.yaml  .yamllint  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  agentic-tools.lock.yaml  commands.md  flake.nix  install-agentic-tools.sh  justfile  modules.yaml
.devcontainer/: Dockerfile  devcontainer.json
cloud/: cloud-init.yaml  cloud-init.yaml.tmpl  first-boot.sh  hetzner-create-vm.sh
config/: aqua.yaml  mise.toml
docs/: agent-runner.md  architecture.md  auth.md  commands.md  hetzner-dx.md  profiles.md  release.md  remote-installers.md  status.md  threat-model.md  use-cases.md  vm-lifecycle.md
images/: packer-hcloud.pkr.hcl  packer-ubuntu.pkr.hcl
profiles/: README.md  agent-runner.env  base-image.env  coding-agent.env  factory.env  human-dev.env  local-llm.env  minimal.env  openclaw-server.env  security.env
scripts/: agent-runner-clean-workspace.sh  agent-runner-logs.sh  agent-runner-start.sh  agent-runner-status.sh  agent-vm-new.sh  audit-remote-installers.sh  auth-status.sh  bootstrap.sh  configure-shell.sh  diff-manifest.sh  doctor.sh  hydrate-workspace.sh  install-agent-clis.sh  install-agentic-tools.sh  install-apt.sh  install-browser-tools.sh  install-cloud-clis.sh  install-local-models.sh  install-openclaw-server.sh  install-runtimes.sh  install-security-tools.sh  prepare-snapshot.sh  render-cloud-init.sh  render-plan.sh  verify-lockfile.sh
src/: error.rs  lib.rs  main.rs
systemd/: agentic-runner.env.example  agentic-runner@.service
(+18 files in other folders)
